   > [P] Clear Mind: Passive skill learned at level 23.
   > Resurgence: Magic skill learned at level 25.
  ~ Player 4, 3 skills:
   > Focus Up: Special skill learned at level 22.
   > [P] Sharp Eye: Passive skill learned at level 24.
   > [P] Masterful: Passive skill learned at level 25.
  ~ Tomes, 3 skills:
   > Dark Orb
   > Ice II
   > Wyvern's Fury
 - Added 95 new items:
  ~ 8 recovery/buff items:
   > Well-Rounded Combination
   > Large Potion
   > Large Elixir
   > Water Jug
   > Dispel Potion
   > Stimulant
   > Vicious Root
   > Fire Resistance Potion
  ~ 10 foodstuffs:
   > Tomato
   > Dragonfruit
   > Starfruit
   > Processed Oats
   > Mana Fritters
   > Seafood Meal
   > Carrot Seeds
   > Wheat Seeds
   > Oat Seeds
   > Tomato Seeds
  ~ 35 materials:
   > Fiery Powder
   > Malicious Essence
   > Shadowspec Ingot
   > Blank Tome
   > Feral Bat Wing
   > Thick-Skinned Herb
   > Turtle Scute
   > Medicinal Herb
   > Medicinal Root
   > Raw Truffle
   > Web Ball
   > Tarantula Silk
   > Vial of Poison
   > Petrified Wood
   > Dragon Scale
   > Enchanted Dragon Scale
   > Forest Core
   > Wind Catalyst
   > Icy Gel
   > Ice Cube
   > Frozen Jewel
   > Frozen Core
   > Gazer Goop
   > Stinger
   > Ectoblood
   > Ectoplasm
   > Tellurium Dust
   > Tellurium Alloy
   > Life Crystal
   > Mana Crystal
   > Mysterious Yellow Badge
   > Knight Token
   > Mage Token
   > Cleric Token
   > Rogue Token
  ~ 13 upgraders:
   > ATK Scroll ★
   > MAT Scroll ★
   > DEF Scroll ★
   > MDF Scroll ★
   > EVA Scroll
   > PDR Scroll
   > MDR Scroll
   > GRD Scroll
   > HRG Scroll
   > MRG Scroll
   > EXR Scroll
   > MCR Scroll
   > INT Scroll
  ~ 8 fishing related items:
   > Flimsy Rod
   > Basic Rod
   > Reinforced Rod
   > Worm
   > Fathead Carp
   > Whiskerfish
   > Northern Redbelly Dace
   > Blue Crab
  ~ 21 miscellaneous items:
   > Phantasmal Charm
   > Advanced Salvage Kit
   > Seed Maker
   > Golden Tablet Piece (Left)
   > Golden Tablet Piece (Right)