@@ -431,7 +431,7 @@
     "Dilong Defeated",
     "Ethereal Bat Defeated",
     "Champion's Banquet Complete",
-    "",
+    "Farmer's Gloves Toggle",
     "",
     "Tester Tower Unlocked"
   ],
@@ -656,7 +656,7 @@
     "Telluria Field Events",
     "Prophecy Defiers",
     "Champion's Banquet",
-    "",
+    "Seed Bag",
     "",
     "",
     "Self Var Respawn Hours",
