@@ -51,7 +51,7 @@ Additions:
    > Dark Orb
    > Ice II
    > Wyvern's Fury
- - Added 95 new items:
+ - Added 97 new items:
   ~ 8 recovery/buff items:
    > Well-Rounded Combination
    > Large Potion
@@ -131,10 +131,12 @@ Additions:
    > Whiskerfish
    > Northern Redbelly Dace
    > Blue Crab
-  ~ 21 miscellaneous items:
+  ~ 23 miscellaneous items:
    > Phantasmal Charm
    > Advanced Salvage Kit
    > Seed Maker
+   > Farmer's Gloves
+   > Seed Bag
    > Golden Tablet Piece (Left)
    > Golden Tablet Piece (Right)
    > Golden Tablet
